# zotero2remarkable_bridge

./: README.md  config_functions.py  flake.nix  pyproject.toml  requirements.txt  rmapi_shim.py  sync_functions.py  zotero2remarkable_bridge.py
