[tool.poetry]
name = "zotero2remarkable-bridge"
version = "0.1.0"
description = "Sync Zotero attachments back-and-forth with your ReMarkable tablet"
authors = ["Laura Brekelmans <mail@laura.fm>"]
license = "gplv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.3"
pymupdf = "^1.22.5"
pyyaml = "6.0.2"
webdavclient3 = "^3.14.6"
pyzotero = "^1.6.11"
remarks = { git = "https://github.com/Scrybbling-together/remarks", branch = "main" }
jinja2 = "^3.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
